Pulpifier/style.css
html, body {
  margin: 0px;
  padding: 0px;
}
html {
  --ed: block;
  --ned: none;
  --edi: inline;
  --nedi: none;
}
body {
  --vwRefUnit: 1vw;
  --vhRefUnit: 1vh;
  --vwUnit: var(--vwRefUnit);
  --vhUnit: var(--vhRefUnit);
}
.ed {
  display: var(--ed);
}
.ned {
  display: var(--ned); /* okily dokily */
}
.edi {
  display: var(--edi);
}
.nedi {
  display: var(--nedi); /* okily dokily */
}
#app {
  position: relative;
  font-family: "Noto Serif Variable", "Noto Serif", serif;
  font-variant-numeric: oldstyle-nums;
  font-variant-ligatures: common-ligatures;
  line-height: 1.4;
  width: calc(100 * var(--vwUnit));
  height: calc(100 * var(--vhUnit));
  align-self: center;
  --vnFontSize: 1.65;
  --vnDialogueFontWeight: 600;
  --vnLineHeight: 1.4;
  --vnFontSizeReally: 1.05em;
  --speakerSize: 1em;
}
#pulp {
  width: calc(100 * var(--vwUnit));
  height: calc(100 * var(--vhUnit));
  position: absolute;
  top: 0px;
  left: 0px;
  background-color: #f0ddb6;
  z-index: 0;
  overflow: hidden;
}
#pulp > #pulp {
  --vwUnit: calc(0.9 * var(--vwRefUnit));
  --vhUnit: calc(0.9 * var(--vhRefUnit));
  top: 50%;
  right: var(--vwRefUnit);
  left: unset !important;
  transform: translateY(-50%);
  border: min(3px, 0.3em) double black;
  box-sizing: border-box;
  z-index: 11;
}
#pulp:nth-child(2) #pulp {
  box-shadow: 0 0 1em black, 0 0 1em black;
}
#pulp > #pulp > #pulp {
  --vwUnit: calc(0.8 * var(--vwRefUnit));
  --vhUnit: calc(0.8 * var(--vhRefUnit));
  z-index: 12;
}
#pulp:nth-child(2) {
  z-index: 1;
}
#pulp:nth-child(2) #pulp ~ #back, #pulp:nth-child(2) #pulp ~ #foot {
  filter: brightness(60%);
}
#back {
  width: calc(100 * var(--vwUnit));
  height: calc(100 * var(--vhUnit));
  position: absolute;
  top: 0px;
  left: 0px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
#foot {
  width: 100%;
  font-size: calc(var(--vnFontSize) * var(--vhUnit));
  min-height: 15.5em;
  display: flex;
  position: absolute;
  bottom: min(var(--vwUnit), 1em);
  justify-content: center;
}
#text {
  background-color: #f8efd4f0;
  font-size: 2em;
  width: 40em;
  position: relative;
  color: black;
  box-sizing: border-box;
  border: min(3px, 0.3em) double black;
  z-index: 20;
}
#pulp:nth-child(2) #text {
  box-shadow: 0 0 0.4em black, 0 0 0.4em black;
}
#text > div {
  width: calc(100% - 12px);
  height: 100%;
  display: flow-root;
  font-size: var(--vnFontSizeReally);
  line-height: var(--vnLineHeight);
  position: relative;
  margin: 0 0.2em;
}
#text .heading {
  font-variant: small-caps;
  text-align: center;
  margin: 0.25em 0px;
  text-wrap: balance;
}
#text .heading > span {
  font-weight: normal;
  font-size: 0.8em;
  display: block;
}
#text h1.heading {
  font-size: 2em;
}
#text h2.heading {
  font-size: 1.6em;
}
#text h3.heading {
  font-size: 1.35em;
}
#text h4.heading {
  font-size: 1.2em;
}
#text h5.heading {
  font-size: 1.1em;
}
#text h6.heading {
  font-size: 1em;
}
#text hr {
  margin: 1em auto;
  max-width: 200px;
}
#foot > div:first-child {
  width: 20em;
  padding-left: 1em;
  display: flex;
  align-items: flex-end;
}
#foot > div:first-child > div {
  width: 100%;
  height: 15.5em;
}
.speaker-back {
  font-size: var(--speakerSize);
  --offsetY: 9em;
  --offsetX: 50%;
  width: calc(200% + 60em);
  left: calc(-1 * var(--offsetX) - 30em);
  height: calc(100% + var(--vwUnit) + var(--offsetY));
  background-position: center top;
  background-size: 60em;
  background-repeat: no-repeat;
  position: relative;
  top: calc(-1 * var(--offsetY));
  z-index: 10;
  pointer-events: none;
}
#pulp:nth-child(2) .speaker-back {
  filter: drop-shadow(0 0 0.75em black) url(#green-desmudger);
}
#foot > div:last-child {
  flex-grow: 1;
  max-width: 21em;
  min-width: var(--vwUnit);
}
b.speaker {
  position: absolute;
  padding: 0.25em 0.4em;
  left: calc(-1 * min(3px, 0.3em));
  bottom: calc(100% + 0.5em);
  min-width: 2em;
  text-align: center;
  font-size: calc(var(--vnFontSizeReally) * 1.1);
  white-space: nowrap;
  background-color: #f8efd4f0;
  border: min(3px, 0.3em) double black;
}
#pulp:nth-child(2) b.speaker {
  box-shadow: 0 0 0.35em black, 0 0 0.35em black;
}
b.speaker + div > span.d, span.d-signal ~ span.d {
  font-weight: var(--vnDialogueFontWeight);
}
p.e, p.f {
  margin: 0.25em 0.5em;
  font-size: 0.8em;
}
p.e {
  display: var(--ed);
}
.characters {
  width: 100%;
  height: 100%;
  position: absolute;
  transform: translate(-50%, -50%);
  top: 50%;
  left: 50%;
}
.characters > img {
  position: absolute;
  transform: translateX(-50%);
  bottom: -45%;
  height: 130%;
  user-select: none;
}
#pulp:nth-child(2) .characters > img {
  filter: url(#green-desmudger);
}
.characters > img.f {
  transform: translateX(-50%) scaleX(-1);
}
img.p-1\/6 { left: calc(100% * 1/6); }
img.p-2\/6, img.p-1\/3 { left: calc(100% * 2/6); }
img.p-3\/6, img.p-2\/4, img.p-1\/2 { left: 50%; }
img.p-4\/6, img.p-2\/3 { left: calc(100% * 4/6); }
img.p-5\/6 { left: calc(100% * 5/6); }
img.p-1\/5 { left: 20%; }
img.p-2\/5 { left: 40%; }
img.p-3\/5 { left: 60%; }
img.p-4\/5 { left: 80%; }
img.p-1\/4 { left: 25%; }
img.p-3\/4 { left: 75%; }
#pulp > img.c {
  position: absolute;
  transform: translate(-50%, 0%);
  top: calc(8 * var(--vhUnit));
  left: calc(50 * var(--vwUnit));
  height: calc(60 * var(--vhUnit));
  filter: opacity(96%);
  border: min(3px, 0.3em) double black;
  box-sizing: border-box;
  background-color: #f1dfbb;
  pointer-events: none;
}
#pulp:nth-child(2) img.c {
  box-shadow: 0 0 1em black, 0 0 1em black;
}
.upper {
  font-variant: small-caps;
}
.uppercase {
  text-transform: uppercase;
}
.center {
  text-align: center;
}
.big {
  font-size: 1.2em;
}
.bigger {
  font-size: 2em;
}
.bold {
  font-weight: bold;
}
.margin {
  padding: 0 1.5em;
  box-sizing: border-box;
}
.fright {
  float: right;
}
.nowrap {
  text-wrap: nowrap;
}
.faketable {
  display: flex;
  flex-wrap: nowrap;
  gap: 1em;
}
.faketable > span:first-child {
  min-width: max(7em, 25%);
  max-width: max(7em, 25%);
  text-indent: 0.5em hanging;
}
.italics {
  font-style: italic;
}
.mono {
  font-family: monospace;
}
.hidden {
  visibility: hidden;
}
.titletext {
  margin: 0.5em 0;
  text-wrap: balance;
}
.titletext > span {
  font-size: 1.2em;
  font-variant: small-caps;
}
.titletext > span:first-child {
  font-size: 2em;
}
.titletext > span:not(:last-child) {
  font-weight: bold;
}

